--- a/7.ReplicationController.yaml
+++ b/7.ReplicationController.yaml
@@ -26,20 +26,20 @@ spec:
         ports:
         - containerPort: <containerPort>
 
----
+---                                                                                               5,1           Top
 apiVersion: v1
 kind: ReplicationController
 metadata:
   name: mavenwebapprc
 spec:
-  replicas: 1
+  replicas: 2
   selector:
-    app: mavenwebapp
-  template: #POD Template
+    app: mavnewebapp
+  template:
     metadata:
-      name: mavenwebapppod
+      name: mavenwenapppod
       labels:
-        app: mavenwebapp
+        app: mavnewebapp
     spec:
       containers:
       - name: mavenwebapp
@@ -47,18 +47,29 @@ spec:
         ports:
         - containerPort: 8080
 ---
+
 apiVersion: v1
 kind: Service
 metadata:
-  name: mavenwebappsvc
+  name: mavenweappsvc
 spec:
   type: NodePort
   selector:
-    app: mavenwebapp
+    app: mavnewebapp
   ports:
-   - port: 80
-     targetPort: 8080
+  - port: 80
+    targetPort: 8080
 ---
 --kubectl get all
-
+kubectl get rc
+kubectl get pods -o wide
+kubectl get rc mavenwebapprc -o wide
+kubectl get rc -o wide
+kubectl get rc -o wide --show-labels
+kubectl get rc mavenwebapprc -o wide --show-labels
+kubectl get pods -o wide --show-labels
+kubectl get ep 
+kubectl get ep mavenweappsvc
+kubectl delete rc mavenwebapprc
+kubectl get pod mavenwebapprc -o yaml
 kubectl scale rc mavenwebapprc --replicas=2     
